methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:19: error: ';' expected but ',' found.
    for (j<-1 to 4) {makePattern() ,forward(7)}
                                   ^PictureMono2:25: error: Unmatched closing brace '}' ignored here
}
^